# micromagneticmodel

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  README.rst  appveyor.yml  example.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/: environment.yml
.github/workflows/: conda.yml  publish.yml
binder/: environment.yml
dev/: descriptors.ipynb  tests.ipynb  umm_ideas.py
docker/: Dockerfile
docs/: abstract.rst  api-reference.rst  conf.py  constants.ipynb  container.rst  cubicanisotropy.rst  damping.rst  data.rst  demag.rst  deriving-dynamics-term.ipynb  deriving-energy-term.ipynb  dmi.rst  driver.rst  dynamics-terms.ipynb  dynamics.rst  dynamicsterm.rst  energy-terms.ipynb  energy.rst  energyproperties.rst  energyterm.rst  evolver-driver.ipynb  evolver.rst  exchange.rst  hamiltonian.rst  index.rst  magnetoelastic.rst  precession.rst  rkky.rst  same-class-terms.ipynb  slonczewski.rst  stt.rst  system.ipynb  system.rst  term-parameters.ipynb  term.rst  termscontainer.rst  termsum.rst  tutorials.rst  uniaxialanisotropy.rst  zeeman.rst  (+1 more)
docs/ipynb/: 00-tutorial-installation-testing-upgrade.ipynb  01-tutorial-deriving-energy-term.ipynb  02-tutorial-deriving-dynamics-term.ipynb  03-tutorial-defining-parameters.ipynb  03-tutorial-other.ipynb  04-tutorial-energy-terms.ipynb  05-tutorial-dynamics-terms.ipynb  06-tutorial-driver.ipynb  06-tutorial-evolver-driver.ipynb  07-tutorial-constants.ipynb  08-tutorial-defining-system.ipynb  08-tutorial-other.ipynb  09-tutorial-other.ipynb  constants.ipynb  deriving-dynamics-term.ipynb  deriving-energy-term.ipynb  dynamics-terms.ipynb  energy-terms.ipynb  index.ipynb  installation-testing-update.ipynb  other.ipynb  system.ipynb  term-parameters.ipynb  test_notebook.ipynb
micromagneticmodel/: __init__.py  consts.py  data.py  driver.py  evolver.py  example.ipynb  mesh.py  meshabstract.py  runner.py  sim.py  simabstract.py  system.py
micromagneticmodel/abstract/: __init__.py  abstract.py  container.py  term.py
micromagneticmodel/consts/: __init__.py
micromagneticmodel/drivers/: __init__.py  driver.py  hysteresisdriver.py  mindriver.py  timedriver.py
micromagneticmodel/dynamics/: __init__.py  damping.py  dampingabstract.py  dynamics.py  dynamicsterm.py  precession.py  precessionabstract.py  slonczewski.py  stt.py  zhangli.py
micromagneticmodel/energies/: __init__.py  anisotropies.py  demag.py  demagabstract.py  dmi.py  energyterm.py  exchange.py  exchangeabstract.py  hamiltonian.py  latex_representations.ipynb  uniaxialanisotropyabstract.py  zeeman.py  zeemanabstract.py
micromagneticmodel/energy/: __init__.py  aei.py  cubicanisotropy.py  demag.py  dmi.py  energy.py  energyterm.py  exchange.py  magnetoelastic.py  rkky.py  uniaxialanisotropy.py  zeeman.py
micromagneticmodel/evolvers/: __init__.py  evolver.py
micromagneticmodel/examples/: __init__.py  examples.py
micromagneticmodel/hamiltonian/: __init__.py  cubicanisotropy.py  demag.py  demagabstract.py  dmi.py  energyproperties.py  energyterm.py  exchange.py  exchangeabstract.py  hamiltonian.py  uniaxialanisotropy.py  uniaxialanisotropyabstract.py  zeeman.py  zeemanabstract.py
micromagneticmodel/mesh/: __init__.py  mesh.py  meshabstract.py
micromagneticmodel/tests/: __init__.py  checks.py  test_abstract.py  test_consts.py  test_cubicanisotropy.py  test_damping.py  test_dampingabstract.py  test_data.py  test_demag.py  test_demagabstract.py  test_dmi.py  test_driver.py  test_dynamics.py  test_energy.py  test_energyproperties.py  test_evolver.py  test_examples.py  test_exchange.py  test_exchangeabstract.py  test_hamiltonian.py  test_hysteresisdriver.py  test_init.py  test_magnetoelastic.py  test_mesh.py  test_meshabstract.py  test_mindriver.py  test_precession.py  test_precessionabstract.py  test_rkky.py  test_runner.py  test_sim.py  test_slonczewski.py  test_stt.py  test_system.py  test_term.py  test_termscontainer.py  test_termsum.py  test_timedriver.py  test_typesystem.py  test_uniaxialanisotropy.py  (+5 more)
micromagneticmodel/util/: __init__.py  term.py  (+4 more)
